[WIP] mediawiki.special.apisandbox: Stop using double scrollbars
OOjs UI BookletLayout no longer has to be 'expanded' to the dimensions
of its parent element, and can instead naturally accommodate its
contents. This means we no longer have to explicitly set the size of
the panel.

Depends on I19cd1f2f3f7c4afa22a507a89c75fb206386eb0d in OOjs UI.

WIP because the toolbar and menu no longer stay onscreen when scrolling
in fullscreen mode. We'll probably have to toggle 'expanded' for all the
nested panels to fix this.

Bug: T129157

--- a/resources/src/mediawiki.special/mediawiki.special.apisandbox.css
+++ b/resources/src/mediawiki.special/mediawiki.special.apisandbox.css
@@ -25,6 +25,7 @@
 	right: 0;
 	background: #fff;
 	z-index: 100;
+	overflow: auto;
 }
 
 .mw-apisandbox-fullscreen .mw-apisandbox-container {
